syntax = "proto3";

package user;

option go_package="./user";

message UserModel {
  string id = 1 ;
  string name = 2 ;
  string email = 3 ;
  string password = 4 ;
}

message FindUserByEmailRequest {
  string email =1;
}

message FindUserByEmailResponse {
  UserModel user = 1;
}

message InsertRequest {
  string username =  1;
  string password = 2;
  string email = 3;
}

message InsertResponse {
  string message = 1;
}

service UserService {
  rpc Insert(InsertRequest) returns (InsertResponse){}
  rpc FindUserByEmail(FindUserByEmailRequest) returns (FindUserByEmailResponse){}
}